--- a/app/src/main/res/menu/menu_top.xml
+++ b/app/src/main/res/menu/menu_top.xml
@@ -3,13 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/item1"
         android:icon="@drawable/ic_action_search"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom"
+        android:title="" />
 
     <item android:id="@+id/item2"
         android:icon="@drawable/ic_action_download"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom"
+        android:title="" />
 
     <item android:id="@+id/item3"
         android:icon="@drawable/ic_action_menu"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom"
+        android:title="" />
 </menu>
